--- a/static/stylesheets/scss/styles.scss
+++ b/static/stylesheets/scss/styles.scss
@@ -214,6 +214,7 @@ body .login-no-shadow {
 }
 
 input.agreement-checkbox {
+  margin-top: 10px;
   margin-right: 10px;
   cursor: pointer;
 }
